Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/UB_Order__c.object-meta.xml
<CustomObject>
    <label>UB Order</label>
    <nameField>
        <label>UB Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>