Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>UB_Event__c</referenceTo>
    <relationshipLabel>UB Order</relationshipLabel>
    <relationshipName>UB_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>