Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <displayFormat>O - {00}</displayFormat>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>