Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UB_Order</relationshipName>
    <type>Lookup</type>
</CustomField>