Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IF(UB_Product__c =&apos;01t300000035NwX&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328611913000/mcdowell&apos;, &apos;&apos;) ,
 IF(UB_Product__c =&apos;01t300000035NwZ&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328612928000/whitemischief&apos;, &apos;&apos;) ,
 IF(UB_Product__c =&apos;01t300000035ee8&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328615503000/blackdog&apos;, &apos;&apos;) , IF(UB_Product__c =&apos;01t300000035Nwa&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328617246000/mcdowellrum&apos;,&apos;&apos;), IF(UB_Product__c =&apos;01t300000035QxV&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328617577000/vladivar&apos;, &apos;&apos;),
 IF(UB_Product__c =&apos;01t300000035SHy&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328618463000/Wine&apos;,&apos;&apos;),
 IF(UB_Product__c =&apos;01t300000035NwY&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328618653000/bagpiper&apos;, &apos;&apos;),
 IF(UB_Product__c =&apos;01t300000035Nwb&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328619084000/royalchallenge&apos;, &apos;&apos;), IF(UB_Product__c =&apos;01t300000035Nwe&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328619291000/signaturewhis&apos;, &apos;&apos;), IF(UB_Product__c =&apos;01t300000035Nwd&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328627773000/Antiquity&apos;, &apos;&apos;),
 IF(UB_Product__c =&apos;01t300000035Nwc&apos;, IMAGE(&apos;https://na1.salesforce.com/resource/1328626355000/romanov&apos;, &apos;&apos;), &apos;&apos;) )
 ) ) ) ) ) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>