Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>UB_DeliveryDate__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>