Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>UB_DeliveryStatus__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Not Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>