Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_Outlet__c.field-meta.xml
<CustomField>
    <fullName>UB_Outlet__c</fullName>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UB Order</relationshipLabel>
    <relationshipName>UB_Order</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>