Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_Price__c.field-meta.xml
<CustomField>
    <fullName>UB_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>