Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_Product__c.field-meta.xml
<CustomField>
    <fullName>UB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>UB Order</relationshipLabel>
    <relationshipName>UB_Order</relationshipName>
    <type>Lookup</type>
</CustomField>