Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>UB_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>