Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_ReasonNotDelivered__c.field-meta.xml
<CustomField>
    <fullName>UB_ReasonNotDelivered__c</fullName>
    <label>Reason Not Delivered</label>
    <length>25</length>
    <type>Text</type>
</CustomField>