Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/UB_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>UB_Total_Price__c</fullName>
    <formula>UB_Price__c * UB_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>