Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Order__c/fields/Volume_Sale__c.field-meta.xml
<CustomField>
    <fullName>Volume_Sale__c</fullName>
    <formula>UB_Quantity__c * 0.750</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>